# Local-Search-Classification-Problem

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  doxygen-config
dox/html/: dir_4eeb864c4eec08c7d6b9d3b0352cfdde.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  index.html  mytools_8cpp.html  mytools_8h.html  mytools_8h_source.html
dox/html/search/: all_3.js  all_7.js  all_8.js  all_a.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_7.js  searchdata.js
dox/latex/: files.tex  index.tex  mytools_8cpp.tex  mytools_8h.tex  mytools_8h_source.tex  refman.tex
results/: 1NN_results.txt  Greedy_results.txt  LSalg_results.txt
scripts/: run1NN.sh  runAll.sh  runGreedy.sh  runLSAlg.sh
src/: Fast1NN.cpp  LSalg.cpp  greedyFast.cpp  mytools.cpp
src/old_slow/: 1NN.cpp  greedy.cpp  test.cpp
tools/: mytools.h
